Envoy/envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: 
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains: 
                - "*"
              routes:
              - match:
                  prefix: "/c"
                route:
                  prefix_rewrite: "/coffee"
                  cluster: coffee_service
              - match:
                  prefix: "/t"
                route:
                  prefix_rewrite: "/tea"
                  cluster: tea_service
  clusters:
  - name: coffee_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: coffee_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: coffeeapi
                port_value: 80
  - name: tea_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tea_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: teaapi
                port_value: 80
